# ThatChord

./: .gitignore  .windsurfrules  find.py  pyproject.toml  settings.py  settings.yml  start.py  thatchord.py
thatchord/: custom.py  find.py  interpret.py  output.py  rank.py  settings.py  start.py  thatchord.py
thatchord.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
thatchord/thatchord.egg-info/: SOURCES.txt  entry_points.txt
