[project]
name = "thatchord"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A console application for automatic chord generation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/astro-masters/ThatChord"
"Bug Tracker" = "https://github.com/astro-masters/ThatChord/issues"

[project.scripts]
thatchord = "thatchord.thatchord:app"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
